# google-okf-implementation

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDBOOK.md  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  notebook-validation.yml
configs/: app.yaml  pipeline.example.yaml
data/seed/: README.md  enterprise_seed_manifest.yaml
docs/: 00-overview.md  01-why-okf.md  02-prerequisites.md  03-first-okf-document.md  04-bundle-structure.md  05-frontmatter-and-fields.md  06-links-index-log-citations.md  07-conformance-and-validation.md  08-real-world-workflows.md  09-troubleshooting.md  10-faq.md  11-next-steps.md  agent.md  architecture.md  blog-linkedin.md  blog-medium.md  blog-substack.md  blog.md  evaluation.md  okf-format.md  release-checklist.md  retrieval.md
docs/records/: 2026-07-03-audit.md  2026-07-03-okf-research.md  2026-07-03-v0.3.0-plan.md  2026-07-03-v0.3.0-release.md
examples/00_minimal_okf/: index.md  log.md
examples/eval/: agent_benchmark.json  gold_qa.json
examples/sample_okf_bundle/: README.md  bundle_manifest.yaml  index.md
knowledge_graph/: graph.graphml
notebooks/: tutorial.ipynb
scripts/: build_handbook_pdf.py  build_sample_okf_bundle.py  check_docs_links.py  generate_tutorial.py  run_real_e2e.py  validate_notebook.py
src/: config.py
src/agent/: __init__.py  assistant.py
src/enterprise_okf_ai/: __init__.py
src/extractor/: __init__.py  engine.py  schema.py
src/generator/: __init__.py  differ.py  okf_writer.py
src/graph/: __init__.py  builder.py
src/ingest/: __init__.py  parser.py
src/okfhub/: __init__.py  diffing.py  docs_generator.py  io.py  logging_config.py  models.py  pipeline.py  settings.py
src/rag/: __init__.py  evaluation.py  retriever.py
src/validators/: __init__.py  okf_validator.py
src/vector_db/: __init__.py  indexer.py
tests/: test_parser.py
tests/integration/: test_ingestion_and_loading.py  test_prompt8_full_pipeline.py  test_real_end_to_end_examples.py
tests/unit/: test_build_okf_cli.py  test_bundle_report_cli.py  test_diffing.py  test_docs_generator.py  test_evaluation.py  test_ingest_cli.py  test_okf_bundle_builder.py  test_okf_generator.py  test_okf_spec_conformance.py  test_phase2_graph_builder.py  test_phase2_okf_validator.py  test_phase2_vector_indexer.py  test_phase3_assistant.py  test_phase3_differ.py  (+8 more)
(+83 files in other folders)
